# drc-ners-nlp

./: .dockerignore  .env  .gitattributes  .gitignore  Dockerfile  Makefile  README.md  app.py  cli.py  compose.yml  engineer_ner_dataset.py  main.py  mapping.py  model_notation.md  monitor.py  ner.py  prompt.txt  pyproject.toml  requirements.txt  train.py
.github/workflows/: audit.yml  quality.yml
assets/: identified_category_distribution.csv  names_letter_frequencies.csv  names_ngrams_summary.csv  names_transition_probs.csv  surnames_letter_frequencies.csv  surnames_ngrams_summary.csv  surnames_transition_probs.csv  transition_comparisons.csv
assets/osm/: provinces.shx
config/: gpu_research_templates.yaml  pipeline.development.yaml  pipeline.production.yaml  pipeline.yaml  research_templates.yaml  spacy_ner.cfg
core/config/: __init__.py  annotation_config.py  config_manager.py  data_config.py  llm_config.py  pipeline_config.py  processing_config.py  project_paths.py
core/utils/: __init__.py  (+5 more)
interface/: configuration.py  dashboard.py  data_overview.py  data_processing.py  experiments.py  log_reader.py  predictions.py  results_analysis.py
misc/: __init__.py
notebooks/: analysis.ipynb  eda.ipynb  names.ipynb  overview.ipynb  provinces_stats.ipynb  qualitative.ipynb  quantitative.ipynb
osm/: provinces.dbf  provinces.shp
processing/: annotate.py  pipeline.py  prepare.py  test.py
research/: base_model.py  model_registry.py  model_trainer.py  neural_network_model.py  traditional_model.py
web/: app.py  dashboard.py  data_processing.py  log_reader.py
(+167 files in other folders)
