[project]
name = "ners"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "geopandas>=1.1.1",
    "joblib>=1.5.2",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "ollama>=0.6.0",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "psutil>=7.1.0",
    "pydantic>=2.11.10",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "spacy>=3.8.7",
    "streamlit>=1.50.0",
    "tqdm>=4.67.1",
    "typer>=0.19.2",
    "tensorflow==2.20.0; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "xgboost>=3.0.5",
    "networkx>=3.5",
]

[project.scripts]
ners = "ners.cli:app"

[build-system]
requires = ["uv_build>=0.8.12,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "ruff>=0.13.3",
]
